dockerfile and docker-compose working

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - ./socket-server:/app/socket-server
     command: >
       sh -c "
+        cd /app/client && yarn install
+        cd /app/socket-server && yarn install
         cd /app/api && gunicorn -b :5000 manage:app & 
         cd /app/socket-server && yarn start & 
         cd /app/client && yarn dev & 
