--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -39,6 +39,7 @@ http {
         }
 
         location /exp/ {
+            rewrite ^/exp/(.*)$ /$1 break;
             proxy_pass http://express;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -57,6 +58,13 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_read_timeout 86400s;
             proxy_send_timeout 86400s;
+        }
+
+        location /_next/webpack-hmr {
+            proxy_pass http://localhost:3000/_next/webpack-hmr;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
     }
 }
